<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerVertical"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerHorizontal"/>

    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerVertical"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="60dp"
            android:text="170"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="60dp"
            android:layout_toEndOf="@+id/currentHeight"
            android:text="@string/cm"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <SeekBar
            android:id="@+id/seekBarForHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:thumbTint="@color/white"
            android:backgroundTint="@color/seekBar_Color" />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calculate"
        android:textColor="@color/white" />


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_toStartOf="@id/centerHorizontal"
        android:background="@drawable/malefemalenotfocus">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@id/textMale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/male" />

        <TextView
            android:id="@+id/textMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:layout_toEndOf="@id/centerHorizontal"
        android:background="@drawable/malefemalenotfocus">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@id/textFemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/female" />

        <TextView
            android:id="@+id/textFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@id/centerHorizontal"
        android:background="@drawable/cardbackground">

        <RelativeLayout
            android:id="@+id/weightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weightLayout">

            <TextView
                android:id="@+id/currentWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_55"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/plusLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/weightIncrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/plus" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/minusLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/plusLayout">

            <ImageView
                android:id="@+id/weightDecrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/minus" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginStart="-182dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerVertical"
        android:background="@drawable/cardbackground">

        <RelativeLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageLayout">

            <TextView
                android:id="@+id/currentAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="22"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/plusAgeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ageIncrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/plus" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/minusageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/plusAgeLayout">

            <ImageView
                android:id="@+id/ageDecrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/minus" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>

